--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -13,5 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Install dependencies
+      run: lein deps
+    - name: Run tests
+      run: lein test
     - name: Antq Action
       uses: liquidz/antq-action@v1.1
